[gd_scene load_steps=2 format=3 uid="uid://bfsyo4rgep2fr"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_piw3e"]

[node name="Main_Menu" type="CanvasLayer"]
script = ExtResource("1_piw3e")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Game Title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -125.0
offset_right = 200.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "TIC-TAC-TOE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="play_against_ai_button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -25.0
offset_right = 125.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
text = "Player vs AI"

[node name="play_against_player_button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = 50.0
offset_right = 125.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
text = "Player vs Player
"

[node name="game_history_button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = 125.0
offset_right = 125.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
text = "Game History
"

[node name="CheckBox" type="CheckBox" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 175.0
offset_top = -15.5
offset_right = 275.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "You on Second"

[connection signal="pressed" from="Panel/play_against_ai_button" to="." method="_on_play_against_ai_button_pressed"]
[connection signal="pressed" from="Panel/play_against_player_button" to="." method="_on_play_against_player_button_pressed"]
[connection signal="pressed" from="Panel/game_history_button" to="." method="_on_game_history_button_pressed"]
[connection signal="toggled" from="CheckBox" to="." method="_on_check_box_toggled"]
